# django-mpesa

./: LICENSE  MANIFEST.in  README.rst  setup.cfg
django_mpesa.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
django_mpesa_payments.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
mpesa/: admin.py  daraja_functions.py  forms.py  models.py  tests.py  urls.py  views.py
mpesa/migrations/: 0001_initial.py  0002_auto_20210511_0706.py
